--- a/pom.xml
+++ b/pom.xml
@@ -102,7 +102,7 @@
                                         implementation="org.apache.maven.plugins.shade.resource.ServicesResourceTransformer"/>
                                 <transformer
                                         implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-                                    <mainClass>org.sganslandt.watcher.Application</mainClass>
+                                    <mainClass>org.sganslandt.watcher.notifier.slack.Application</mainClass>
                                 </transformer>
                             </transformers>
                         </configuration>
